# adrom

./: CMakeLists.txt  README.md  README.txt
Main/: CMakeLists.txt  Main.cpp
ModuleInterface/: ModuleInterface.cpp  ModuleInterface.h
OperationManager/: CMakeLists.txt  OperationManager.cpp  OperationManager.h
